--- a/services/main/package.json
+++ b/services/main/package.json
@@ -10,12 +10,20 @@
     "build:desktop": "webpack --env mode=production --env platform=desktop",
     "typecheck": "tsc"
   },
-  "dependencies":{
+  "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
     "@packages/build-config": "*",
     "@packages/shared": "*",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-redux": "^7.1.33",
+    "classnames": "^2.5.1",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
