--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "front",
   "version": "1.0.0",
-  "scripts": {
-  },
-  "workspaces":[
+  "scripts": {},
+  "workspaces": [
     "packages/*",
     "services/*"
-  ]
+  ],
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
