--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -14,6 +14,9 @@
     "paths": {
       "@services/*": [
         "../../services/*"
+      ],
+      "state/*": [
+        "./src/state/*"
       ]
     }
   }
