--- a/services/main/package.json
+++ b/services/main/package.json
@@ -18,6 +18,7 @@
     "@packages/shared": "*",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/react-redux": "^7.1.33",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.2",
@@ -26,7 +27,9 @@
     "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
-    "uuid": "^10.0.0"
+    "redux-saga": "^1.3.0",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
