--- a/services/main/tsconfig.json
+++ b/services/main/tsconfig.json
@@ -6,5 +6,10 @@
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "exclude": [
+    "./cypress.config.ts",
+    "cypress",
+    "**/*.cy.js"
+  ]
 }
