--- a/services/main/package.json
+++ b/services/main/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env mode=development",
+    "start:prod": "webpack serve --env mode=production",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "build:mobile": "webpack --env mode=production --env platform=mobile",
